--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "body-parser": "^1.17.2",
     "connect-mongo": "^1.3.2",
     "express": "^4.15.3",
+    "express-jwt": "^5.3.0",
     "express-session": "^1.15.3",
     "https": "^1.0.0",
     "mongoose": "^4.10.4",
     "morgan": "^1.8.2",
+    "nexmo": "^2.0.2",
+    "node-mongoose-validator": "^1.2.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "session": "^0.1.0"
+    "passport-jwt": "^2.2.1",
+    "validator": "^7.0.0"
   },
   "devDependencies": {},
   "scripts": {
