--- a/package.json
+++ b/package.json
@@ -4,24 +4,31 @@
   "description": "*smoke with me*",
   "main": "app.js",
   "dependencies": {
+    "aws-sdk": "^2.70.0",
     "body-parser": "^1.17.2",
     "connect-mongo": "^1.3.2",
     "express": "^4.15.3",
     "express-jwt": "^5.3.0",
     "express-session": "^1.15.3",
     "https": "^1.0.0",
+    "jasmine-node": "^1.14.5",
     "mongoose": "^4.10.4",
     "morgan": "^1.8.2",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
     "nexmo": "^2.0.2",
     "node-mongoose-validator": "^1.2.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
+    "request": "^2.81.0",
     "validator": "^7.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^3.19.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_packages/.bin/jasmine-node spec",
     "start": "nodemon app.js"
   },
   "repository": {
