--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "express-jwt": "^5.3.0",
     "express-session": "^1.15.3",
     "https": "^1.0.0",
-    "jasmine-node": "^1.14.5",
     "mongoose": "^4.10.4",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
@@ -25,10 +24,11 @@
     "validator": "^7.0.0"
   },
   "devDependencies": {
-    "eslint": "^3.19.0"
+    "eslint": "^3.19.0",
+    "jasmine-node": "^1.14.5"
   },
   "scripts": {
-    "test": "./node_packages/.bin/jasmine-node spec",
+    "test": "jasmine-node spec",
     "start": "nodemon app.js"
   },
   "repository": {
